@@ -1,3 +1,5 @@
+03 Dec 2010 Build logo in console initialization only if it hasn't already
+            been built via HERCLOGO configuration statement - Kevin Leonard
 01 Dec 2010 cvslvlck renamed to bldlvlck and corrections made for Apple/Darwin
             - Enrico Sorichetti by Fish (README.CVS also renamed to README.SVN)
 01 Dec 2010 Allow //./Tape0 or \\.\Tape0 for Windows device filename - Fish
